lib/audio/justifier_audio_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for the justifier audio engine
class JustifierAudioBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  JustifierAudioBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  JustifierAudioBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int justifier_init(int sample_rate, int buffer_size) {
    return _justifier_init(sample_rate, buffer_size);
  }

  late final _justifier_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'justifier_init',
      );
  late final _justifier_init = _justifier_initPtr
      .asFunction<int Function(int, int)>();

  void justifier_shutdown() {
    return _justifier_shutdown();
  }

  late final _justifier_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('justifier_shutdown');
  late final _justifier_shutdown = _justifier_shutdownPtr
      .asFunction<void Function()>();

  int justifier_voice_add(
    NativeWaveformType type,
    double frequency,
    double amplitude,
  ) {
    return _justifier_voice_add(type.value, frequency, amplitude);
  }

  late final _justifier_voice_addPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.UnsignedInt, ffi.Float, ffi.Float)
        >
      >('justifier_voice_add');
  late final _justifier_voice_add = _justifier_voice_addPtr
      .asFunction<int Function(int, double, double)>();

  void justifier_voice_remove(int voice_id) {
    return _justifier_voice_remove(voice_id);
  }

  late final _justifier_voice_removePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'justifier_voice_remove',
      );
  late final _justifier_voice_remove = _justifier_voice_removePtr
      .asFunction<void Function(int)>();

  void justifier_voice_set_frequency(int voice_id, double hz) {
    return _justifier_voice_set_frequency(voice_id, hz);
  }

  late final _justifier_voice_set_frequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_frequency',
      );
  late final _justifier_voice_set_frequency = _justifier_voice_set_frequencyPtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_amplitude(int voice_id, double amplitude) {
    return _justifier_voice_set_amplitude(voice_id, amplitude);
  }

  late final _justifier_voice_set_amplitudePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_amplitude',
      );
  late final _justifier_voice_set_amplitude = _justifier_voice_set_amplitudePtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_pan(int voice_id, double pan) {
    return _justifier_voice_set_pan(voice_id, pan);
  }

  late final _justifier_voice_set_panPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_pan',
      );
  late final _justifier_voice_set_pan = _justifier_voice_set_panPtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_detune(int voice_id, double cents) {
    return _justifier_voice_set_detune(voice_id, cents);
  }

  late final _justifier_voice_set_detunePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_detune',
      );
  late final _justifier_voice_set_detune = _justifier_voice_set_detunePtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_waveform(int voice_id, NativeWaveformType type) {
    return _justifier_voice_set_waveform(voice_id, type.value);
  }

  late final _justifier_voice_set_waveformPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.UnsignedInt)>>(
        'justifier_voice_set_waveform',
      );
  late final _justifier_voice_set_waveform = _justifier_voice_set_waveformPtr
      .asFunction<void Function(int, int)>();

  void justifier_voice_set_mod_ratio(int voice_id, double ratio) {
    return _justifier_voice_set_mod_ratio(voice_id, ratio);
  }

  late final _justifier_voice_set_mod_ratioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_mod_ratio',
      );
  late final _justifier_voice_set_mod_ratio = _justifier_voice_set_mod_ratioPtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_mod_index(int voice_id, double index) {
    return _justifier_voice_set_mod_index(voice_id, index);
  }

  late final _justifier_voice_set_mod_indexPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_mod_index',
      );
  late final _justifier_voice_set_mod_index = _justifier_voice_set_mod_indexPtr
      .asFunction<void Function(int, double)>();

  void justifier_voice_set_filter_type(int voice_id, int type) {
    return _justifier_voice_set_filter_type(voice_id, type);
  }

  late final _justifier_voice_set_filter_typePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'justifier_voice_set_filter_type',
      );
  late final _justifier_voice_set_filter_type =
      _justifier_voice_set_filter_typePtr.asFunction<void Function(int, int)>();

  void justifier_voice_set_filter_cutoff(int voice_id, double hz) {
    return _justifier_voice_set_filter_cutoff(voice_id, hz);
  }

  late final _justifier_voice_set_filter_cutoffPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_filter_cutoff',
      );
  late final _justifier_voice_set_filter_cutoff =
      _justifier_voice_set_filter_cutoffPtr
          .asFunction<void Function(int, double)>();

  void justifier_voice_set_filter_resonance(int voice_id, double resonance) {
    return _justifier_voice_set_filter_resonance(voice_id, resonance);
  }

  late final _justifier_voice_set_filter_resonancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'justifier_voice_set_filter_resonance',
      );
  late final _justifier_voice_set_filter_resonance =
      _justifier_voice_set_filter_resonancePtr
          .asFunction<void Function(int, double)>();

  void justifier_voice_set_gate(int voice_id, int gate_on) {
    return _justifier_voice_set_gate(voice_id, gate_on);
  }

  late final _justifier_voice_set_gatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'justifier_voice_set_gate',
      );
  late final _justifier_voice_set_gate = _justifier_voice_set_gatePtr
      .asFunction<void Function(int, int)>();

  void justifier_voice_set_gate_times(
    int voice_id,
    double attack_s,
    double decay_s,
    double sustain_level,
    double release_s,
  ) {
    return _justifier_voice_set_gate_times(
      voice_id,
      attack_s,
      decay_s,
      sustain_level,
      release_s,
    );
  }

  late final _justifier_voice_set_gate_timesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('justifier_voice_set_gate_times');
  late final _justifier_voice_set_gate_times =
      _justifier_voice_set_gate_timesPtr.asFunction<
        void Function(int, double, double, double, double)
      >();

  void justifier_panic() {
    return _justifier_panic();
  }

  late final _justifier_panicPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('justifier_panic');
  late final _justifier_panic = _justifier_panicPtr
      .asFunction<void Function()>();

  void justifier_unpanic() {
    return _justifier_unpanic();
  }

  late final _justifier_unpanicPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('justifier_unpanic');
  late final _justifier_unpanic = _justifier_unpanicPtr
      .asFunction<void Function()>();

  void justifier_set_master_volume(double volume) {
    return _justifier_set_master_volume(volume);
  }

  late final _justifier_set_master_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'justifier_set_master_volume',
      );
  late final _justifier_set_master_volume = _justifier_set_master_volumePtr
      .asFunction<void Function(double)>();

  int justifier_is_running() {
    return _justifier_is_running();
  }

  late final _justifier_is_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('justifier_is_running');
  late final _justifier_is_running = _justifier_is_runningPtr
      .asFunction<int Function()>();

  int justifier_get_xrun_count() {
    return _justifier_get_xrun_count();
  }

  late final _justifier_get_xrun_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'justifier_get_xrun_count',
      );
  late final _justifier_get_xrun_count = _justifier_get_xrun_countPtr
      .asFunction<int Function()>();

  int justifier_get_active_voice_count() {
    return _justifier_get_active_voice_count();
  }

  late final _justifier_get_active_voice_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'justifier_get_active_voice_count',
      );
  late final _justifier_get_active_voice_count =
      _justifier_get_active_voice_countPtr.asFunction<int Function()>();
}

enum NativeWaveformType {
  WAVEFORM_SINE(0),
  WAVEFORM_TRIANGLE(1),
  WAVEFORM_SAW(2),
  WAVEFORM_SQUARE(3),
  WAVEFORM_PULSE(4),
  WAVEFORM_WHITE_NOISE(5),
  WAVEFORM_PINK_NOISE(6),
  WAVEFORM_BROWN_NOISE(7),
  WAVEFORM_LFNOISE0(8),
  WAVEFORM_LFNOISE1(9),
  WAVEFORM_LFNOISE2(10),
  WAVEFORM_FM(11);

  final int value;
  const NativeWaveformType(this.value);

  static NativeWaveformType fromValue(int value) => switch (value) {
    0 => WAVEFORM_SINE,
    1 => WAVEFORM_TRIANGLE,
    2 => WAVEFORM_SAW,
    3 => WAVEFORM_SQUARE,
    4 => WAVEFORM_PULSE,
    5 => WAVEFORM_WHITE_NOISE,
    6 => WAVEFORM_PINK_NOISE,
    7 => WAVEFORM_BROWN_NOISE,
    8 => WAVEFORM_LFNOISE0,
    9 => WAVEFORM_LFNOISE1,
    10 => WAVEFORM_LFNOISE2,
    11 => WAVEFORM_FM,
    _ => throw ArgumentError("Unknown value for NativeWaveformType: $value"),
  };
}

const int JUSTIFIER_MAX_VOICES = 32;

const int JUSTIFIER_DEFAULT_SAMPLE_RATE = 48000;

const int JUSTIFIER_DEFAULT_BUFFER_SIZE = 256;

const int JUSTIFIER_MAX_BUFFER_SIZE = 4096;

const int NUM_WAVEFORM_TYPES = 12;
